Adjust the spacing of the stop fields some more

--- a/frontend/style/annotations/annotate.less
+++ b/frontend/style/annotations/annotate.less
@@ -39,7 +39,8 @@ i.check {
 	}
 
 	.stop-fields {
-		margin: 16px 0;
+		margin-top: 16px;
+		margin-bottom: 32px;
 		padding: 8px;
 
 		legend {
